[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hustle-vault"
version = "1.0.0"
description = "Side project organizer: track multiple projects, ideas, and context-switch efficiently."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Hustle Vault Contributors"}]
keywords = ["projects", "organizer", "productivity", "side-projects", "ideas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
hustle-vault = "hustle_vault.cli:cli"

[project.urls]
Homepage = "https://github.com/hustle-vault/hustle-vault"
Issues = "https://github.com/hustle-vault/hustle-vault/issues"
